# phylax

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  bench-latest.md  benchmarks-rust-v-cyrius.md  benchmarks.md  cyrius.cyml  deny.toml  phylax-intel.yar
.github/workflows/: ci.yml  release.yml
benches/: benchmarks.rs
crates/phylax-ai/: Cargo.toml
crates/phylax-ai/src/: daimon.rs  lib.rs
crates/phylax-analyze/: Cargo.toml
crates/phylax-analyze/src/: lib.rs
crates/phylax-core/: Cargo.toml
crates/phylax-core/src/: lib.rs
crates/phylax-mcp/: Cargo.toml
crates/phylax-mcp/src/: lib.rs
crates/phylax-yara/: Cargo.toml
crates/phylax-yara/src/: lib.rs
docs/architecture/: overview.md
docs/audit/: 2026-04-16-security-audit.md
docs/bugs/: cc5-register-spill-response.md  cc5-register-spill.md  cc5-spill-repro.cyr
docs/development/: 2026-04-28-aarch64-handoff.md  dependency-watch.md  roadmap.md  threat-model.md
docs/development/issues/: 2026-04-30-cyrius-stdlib-issues.md
docs/guides/: cli-reference.md  integration.md  testing.md
examples/: scan_file.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_analyze.rs  fuzz_entropy.rs  fuzz_yara.rs
lib/: bote_audit.cyr  bote_codec.cyr  bote_content.cyr  bote_dispatch.cyr  bote_error.cyr  bote_events.cyr  bote_events_majra.cyr  bote_jsonx.cyr  bote_protocol.cyr  bote_registry.cyr  bote_schema.cyr  libro_chain.cyr  libro_entry.cyr  libro_error.cyr  libro_export.cyr  libro_hasher.cyr  libro_merkle.cyr  libro_query.cyr  libro_retention.cyr  libro_verify.cyr  majra_counter.cyr  majra_pubsub.cyr  sigil.cyr
rust-old/: Cargo.toml  benchmarks.md  codecov.yml  deny.toml
rust-old/fuzz/fuzz_targets/: fuzz_analyze.rs  fuzz_entropy.rs
rust-old/src/: analyze.rs  elf.rs  error.rs  main.rs  queue.rs  script.rs  ssdeep.rs  types.rs  watch.rs  yara_parser.rs
rust-old/supply-chain/: config.toml
rust-old/tests/: integration.rs
scripts/: bench-history.sh  version-bump.sh
src/: ai.rs  analyze.cyr  analyze.rs  archive.cyr  bote_tools.rs  cli.cyr  daimon.rs  elf.cyr  elf.rs  error.rs  hashing.cyr  hoosh.rs  integration.cyr  lib.cyr  lib.rs  lib_core.cyr  main.cyr  main.rs  pe.cyr  pe.rs  phylax.cyr  quarantine.cyr  quarantine.rs  queue.cyr  queue.rs  report.cyr  report.rs  script.cyr  strings.cyr  strings.rs  syscall_aarch64_linux.cyr  syscall_x86_64_linux.cyr  tlsh.rs  types.cyr  types.rs  utils.cyr  watch.rs  yara.cyr  yara.rs  yara_parser.rs  (+1 more)
supply-chain/: audits.toml
tests/: integration.rs  phylax-bench-lite.bcyr  phylax-core.bcyr  phylax-core.tcyr  phylax.bcyr  phylax.fcyr  phylax.tcyr
