[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
edition = "2024"
license = "GPL-3.0"
version = "0.1.0"
rust-version = "1.85"
repository = "https://github.com/MacCracken/phylax"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
regex = "1"
sha2 = "0.10"

# Internal
phylax-core = { path = "crates/phylax-core" }
phylax-yara = { path = "crates/phylax-yara" }
phylax-analyze = { path = "crates/phylax-analyze" }
phylax-mcp = { path = "crates/phylax-mcp" }
phylax-ai = { path = "crates/phylax-ai" }

[package]
name = "phylax"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Phylax — AI-native threat detection engine"

[dependencies]
phylax-core = { workspace = true }
phylax-yara = { workspace = true }
phylax-analyze = { workspace = true }
phylax-mcp = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "benchmarks"
harness = false

[[example]]
name = "scan_file"
