[package]
name = "phylax"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "GPL-3.0"
description = "Phylax — AI-native threat detection engine"
repository = "https://github.com/MacCracken/phylax"
readme = "README.md"
keywords = ["security", "threat-detection", "yara", "entropy", "binary-analysis"]
categories = ["command-line-utilities"]
exclude = [".claude/", ".github/", "target/"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
regex = "1"
sha2 = "0.10"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "benchmarks"
harness = false

[[example]]
name = "scan_file"
