[package]
name = "phylax"
version = "0.5.0"
edition = "2024"
rust-version = "1.85"
license = "GPL-3.0-only"
description = "Phylax — AI-native threat detection engine"
repository = "https://github.com/MacCracken/phylax"
readme = "README.md"
keywords = ["security", "threat-detection", "yara", "entropy", "binary-analysis"]
categories = ["command-line-utilities"]
exclude = [".claude/", ".github/", "target/", "docs/", "scripts/", "benchmark-results/"]

[features]
default = []
bote = ["dep:bote"]

[dependencies]
aho-corasick = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
memchr = "2"
rayon = "1"
regex = "1"
sha2 = "0.10"
notify = { version = "8", features = ["serde"] }
bote = { version = "0.22", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"
tempfile = "3"

[[bench]]
name = "benchmarks"
harness = false

[[example]]
name = "scan_file"
