[package]
name = "phylax-fuzz"
version = "0.0.0"
edition = "2024"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
phylax-core = { path = "../crates/phylax-core" }
phylax-yara = { path = "../crates/phylax-yara" }
phylax-analyze = { path = "../crates/phylax-analyze" }

[[bin]]
name = "fuzz_yara"
path = "fuzz_targets/fuzz_yara.rs"
doc = false

[[bin]]
name = "fuzz_analyze"
path = "fuzz_targets/fuzz_analyze.rs"
doc = false

[[bin]]
name = "fuzz_entropy"
path = "fuzz_targets/fuzz_entropy.rs"
doc = false
