[package]
name = "phylax-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core types: scan targets, findings, severity, scanner trait"

[dependencies]
chrono = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
